[package]
name = "kovi-plugin-msg-logger"
version = "0.1.4"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Nawyjx <3373167460@qq.com>"]
description = "Kovi 的全量消息记录与分析插件，支持 Jieba 分词与多维度数据查询。"
categories = ["database", "text-processing", "visualization"]
repository = "https://github.com/araea/kovi-plugin-msg-logger"
keywords = ["kovi", "kovi-plugin", "sqlite", "jieba", "analysis"]

[dependencies]
kovi = ">=0.12"
log = "0.4"
chrono = "0.4"
anyhow = "1.0"
jieba-rs = "0.8"
serde_json = "1.0"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
